Refactoring mostly. MatterStack broken, MatterStackGhatack to be investigated